Prevent tap highlighting entire volume control on mobile

--- a/app/styles/_volume.scss
+++ b/app/styles/_volume.scss
@@ -20,6 +20,7 @@ $slider-spacing: $slider-spacing-left + $slider-spacing-right;
   height: 100%;
   cursor: pointer;
   outline: 0;
+  -webkit-tap-highlight-color: rgba(255, 255, 255, 0);
 
   &.volume-hover,
   &:hover,
